--- a/views/builder.hbs
+++ b/views/builder.hbs
@@ -121,7 +121,7 @@
 
         <!-- Edit Field -->
         <div class="tab-pane fade" id="lp-pill-edit" role="tabpanel" aria-labelledby="tabEdit">
-          <h5 id="editTitle" class="text-body-secondary">No field selected</h5>
+          <h5 id="editTitle" class="text-body-secondary"></h5>
 
           <div class="mb-3">
             <label for="editLabel" class="form-label">Display Label</label>
