Fix rich text editor

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -50,6 +50,9 @@
 
   <!-- intl-tel-input CSS (builder preview flags) -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@18.2.1/build/css/intlTelInput.css">
+
+  <!-- Page-level head content injected here -->
+  {{{_sections.head}}}
 </head>
 
 <body>
