--- a/views/builder.hbs
+++ b/views/builder.hbs
@@ -87,6 +87,10 @@
                   class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
                   data-type="file"><i class="icon-base ti tabler-file-upload icon-sm me-2"></i><span
                     class="text-start">File Upload</span></button></div>
+              <div class="col-6 d-flex"><button type="button"
+                  class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
+                  data-type="richText"><i class="icon-base ti tabler-edit icon-sm me-2"></i><span
+                    class="text-start">Rich Text Editor</span></button></div>
             </div>
           </div>
 
@@ -191,6 +195,11 @@
   </div>
 </div>
 
+{{#section 'head'}}
+<!-- Quill Rich Text Editor CSS -->
+<link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css">
+{{/section}}
+
 {{#section 'scripts'}}
 {{#if preloadB64}}
 <script>
@@ -206,6 +215,16 @@
   window.INTL_UTILS_URL = "https://cdn.jsdelivr.net/npm/intl-tel-input@18.2.1/build/js/utils.js";
   // Enable modular Builder boot
   window.BUILDER_USE_MODULAR = true;
+</script>
+
+<!-- Quill Rich Text Editor JS -->
+<script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+<script>
+  // Test Quill loading
+  console.log('Quill loaded:', typeof window.Quill !== 'undefined');
+  if (window.Quill) {
+    console.log('Quill version:', window.Quill.version);
+  }
 </script>
 
 <!-- SortableJS for robust drag-and-drop reordering -->
