Added password field

--- a/views/builder.hbs
+++ b/views/builder.hbs
@@ -65,6 +65,10 @@
                   class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
                   data-type="phone"><i class="icon-base ti tabler-phone icon-sm me-2"></i><span
                     class="text-start">Phone</span></button></div>
+              <div class="col-6 d-flex"><button type="button"
+                  class="btn btn-outline-primary w-100 h-100 d-flex justify-content-start align-items-start text-start"
+                  data-type="password"><i class="icon-base ti tabler-lock icon-sm me-2"></i><span
+                    class="text-start">Password</span></button></div>
 
               <!-- Additional field types -->
               <div class="col-6 d-flex"><button type="button"
