Converted builder scripts to ES modules

--- a/views/builder.hbs
+++ b/views/builder.hbs
@@ -239,5 +239,5 @@
 <!-- SortableJS for robust drag-and-drop reordering -->
 <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.2/Sortable.min.js"></script>
 
-<script src="/js/builder.js"></script>
+<script type="module" src="/src/client/builder/index.js"></script>
 {{/section}}
