--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -88,7 +88,7 @@
   <script src="/assets/vendor/libs/datatables-bs5/datatables-bootstrap5.js"></script>
 
   <!-- App-level helpers -->
-  <script src="/js/app.js"></script>
+  <!-- Note: app.js removed as it doesn't exist -->
 
   <!-- intl-tel-input (JS) once -->
   <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@18.2.1/build/js/intlTelInput.min.js"></script>
